# sequence_align

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: build_wheels.yml  docs.yml  pypi.yml  tests_and_lint.yml
docs/: examples.md  index.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: copyright_line_check.sh  lint.sh  test.sh
src/sequence_align/: pairwise.py
tests/perf/: expected_perf.yml  test_hirschberg.py  test_needleman_wunsch.py  utils.py
tests/unit/: test_alignment_score.py  test_hirschberg.py  test_needleman_wunsch.py
