[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "sequence_align"
version = "0.1.0b5"
description = "Efficient implementations of Needleman-Wunsch and other sequence alignment algorithms in Rust with Python bindings."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Kensho Technologies LLC.", email = "sequence-align-maintainer@kensho.com"},
]
maintainers = [
    {name = "Kensho Technologies LLC.", email = "sequence-align-maintainer@kensho.com"},
]
# Apache 2.0
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

[project.urls]
source = "https://github.com/kensho-technologies/sequence_align"
"Homepage" = "https://github.com/kensho-technologies/sequence_align"
"Bug Tracker" = "https://github.com/kensho-technologies/sequence_align/issues"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "codecov",
    "flake8",
    "isort>=5.0.0,<6",
    "mypy",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 100

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
